# sitewomen

./: .gitignore  LICENSE  README.md  pyproject.toml
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/static/css/admin/: admin.css
sitewomen/templates/: base.html
sitewomen/templates/admin/: base_site.html
sitewomen/women/: admin.py  apps.py  converters.py  models.py  urls.py  views.py
sitewomen/women/migrations/: 0001_initial.py  0002_alter_women_options_women_slug_and_more.py  0002_remove_husband_m_count.py  0003_alter_women_is_published_alter_women_slug.py  0003_husband_m_count.py  0004_category_women_cat.py  0004_husband_m_count2.py  0005_alter_women_cat.py  0005_remove_husband_m_count2.py  0006_remove_women_tags.py  0006_tagarticle_alter_women_cat_women_tags.py  0007_husband_women_husband.py  0007_women_tags.py
sitewomen/women/templates/women/: about.html  addpage.html  article.html  index.html  list_categories.html  list_tags.html
sitewomen/women/templates/women/includes/: nav_footer.html
sitewomen/women/templatetags/: women_tags.py
