[tool.poetry]
name = "sitewomen"
version = "0.1.0"
description = "Education project"
authors = ["zeefeerkee <finekii@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.1"
ipython = "^8.26.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
